@@ -50,4 +50,4 @@ test/e2e/conf/httpd.conf
 test/e2e/conf/modules.conf
 test/e2e/config.ini
 test/.pytest_cache
-
+.idea
